# Packages

./: .gitignore  ReadMe.txt
.github/workflows/: libopencv-dev.4.10.0.yml  libopencv-dev.4.2.0.yml  libopencv-dev.4.5.4.yml  libopencv-dev.4.6.0.yml  libopencv-dev.4.9.0.yml  libopencv-dev.yml
choco/ChocolateStore/: ChocolateStore.nuspec
choco/ChocolateStoreLegacy/: ChocolateStoreLegacy.nuspec
choco/aqt/: aqt.nuspec
choco/aqt/tools/: chocolateyInstall.ps1
choco/formatfactory/: formatfactory.nuspec
choco/formatfactory/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
choco/libopencv-dev/: libopencv-dev.nuspec
choco/libopencv-dev/tools/: LICENSE.txt  VERIFICATION.txt  ade-0.1.1f_mingw13.patch  avx_libwebp_mingw.patch  chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1  no_iconv_mingw.patch  regKeys.ps1  sharedVars.ps1
choco/libopencv-dev/tools/cv_mat_test/: CMakeLists.txt  main.cpp
choco/mavlink/: mavlink.nuspec
choco/mavlink/tools/: LICENSE.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1  sharedVars.ps1
choco/mingw-patch/: mingw-patch.nuspec
choco/mingw-patch/tools/: chocolateyInstall.ps1
choco/missionplanner/: missionplanner.nuspec
choco/missionplanner/tools/: LICENSE.txt  VERIFICATION.txt  chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1
choco/qt5-default/: qt5-default.nuspec
choco/qt5-default/tools/: LICENSE.txt  VERIFICATION.txt  chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1  sharedVars.ps1
choco/qt6-base-dev/: qt6-base-dev.nuspec
choco/qt6-base-dev/tools/: chocolateyinstall.ps1  sharedVars.ps1
choco/qtbase5-dev/: qtbase5-dev.nuspec
choco/qtbase5-dev/tools/: chocolateyinstall.ps1  sharedVars.ps1
choco/qtcreator/: qtcreator.nuspec
choco/qtcreator/tools/: chocolateyinstall.ps1
choco/ros-melodic-codac/: build.bat  ros-melodic-codac.nuspec
choco/ros-melodic-codac/tools/: setup.bat
choco/ros-melodic-hector_gazebo_plugins/: ReadMe.txt  build.bat  ros-melodic-hector_gazebo_plugins.nuspec
choco/ros-melodic-ibex/: build.bat  ros-melodic-ibex.nuspec
choco/ros-noetic-codac/: build.bat  ros-noetic-codac.nuspec
choco/ros-noetic-hector_gazebo_plugins/: build.bat  ros-noetic-hector_gazebo_plugins.nuspec
choco/ros-noetic-ibex/: build.bat  ros-noetic-ibex.nuspec
(+7 files in other folders)
